css/add-on.css
/*
  This css file is for individual users to restyle items for their personal site,
  or for the implementation of features specifically for their site. Anything that
  is an official part of the theme (ex. Pull Requests) should be included in main.css
  and follow the formatting and style given.
*/

.topinblock {
  vertical-align:top;
  display:inline-block;
  *display:inline; /*for IEv8, at least*/
}

.rounded15 {
  -moz-border-radius:15px;
  -webkit-border-radius:15px;
  -khtml-border-radius:15px;
  border-radius:15px;
}

.rounded5 {
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  -khtml-border-radius:5px;
  border-radius:5px;
}


/* use with div elements when want to have 4 columns in my page */
.col4 {
  width:25%;
  float:left;
}

/* use with div elements when want to have 4 columns in my page */
.col4left {
  position:relative;
  float:left;
  width:250px;
  height:200px;
  font-size:9pt;
}

/* like col4left, but extra 8px padding */
.col4rite {
  float:left;
  width:125px;
  font-size:9pt;
  padding: 40px 8px 8px 8px;
}



div.quote {
  float:left;
  width:245px;
  padding:10px;
}
#js-quotes .quote dd {
  color:#999;
}

#randquote {
  float:right;
  width:400px;
  margin-right:10%;
  text-align:center;
  font-size:80%;
  font-style:italic;
}
#randquote dt {
  color:white !important;  /*xxx WP CSS is braindead!! */
}
#randquote a {
  color:gray !important;
  text-decoration: none !important;
}




div.protest div.txt,
div.protest div.pic {
  display:inline-block;
  *display:inline; /*for IEv8, at least*/
  vertical-align:middle;
}
div.protest div.pic {
  width:420px;
  height:350px;
}
div.protest div.txt {
  width:350px;
}



/******************** HOVER ****************************/
/* this is the SWEET stuff! */
.showOnHover { text-decoration: none; display:none; }
.hoverShower { text-decoration: none; }
a.hoverShower:hover .showOnHover {
  text-decoration: none !important;
  display:inline;
  z-index:100;
  position:absolute;
}


/* Visibility inverted (for /tours/) */
.showOnHover2 {
  display:inline;
  z-index:100;
  position:absolute;
}
.hoverShower2:hover .showOnHover2 {
  display:none;
}

.tourbox, .tourOverlay {
  background-color:#333;
}
.tourbox {
  padding: 5px;
  margin-bottom: 20px;
  position: relative;
  overflow-x: hidden;
}
.tourbox img {
  border: 0;
  width: 100%;
}
.tourOverlay {
  width: 100%;
  font-style: italic;
  padding: 10px 20px;
  color:white;
  opacity: .70;
}
.tourOverlay hr {
  margin: 5px 0;
}
.tourOverlay h5 {
  margin: 5px 0;
  color:white;
}
/******************** HOVER ****************************/



/******************** PHOTO ALBUMS STUFF ****************************/
#content span.pnav {
  font-size:8pt;
  white-space:nowrap;
  padding-left:30px;
}
.pixcell.topinblock {
  margin-left: 10px;
  min-height: 300px;
}

body.album table {
  text-align: right;
  /* override some theme defaults */
  width: initial;
  margin: 1em 0;
  box-shadow: none;
  /* override chrome default (for hover) */
  border-spacing: 0;
}
body.album table>tbody>tr:hover {
  background-color: transparent; /* theme override */
}

/* override some theme setup for more content rich / denser page */
body.album #wrapper {
  grid-template-areas: 'intro' 'main' 'sidebar' 'footer';
  grid-template-rows: auto 1fr auto auto;
  grid-template-columns: initial;
}
body.album #site-sidebar {
  display: none;
}
body.album .post {
  max-width: initial;
}
/******************** PHOTO ALBUMS STUFF ****************************/



/******************** PICTURES -- NICE CORNERS ****************************/
.pixOverlay {
  margin-left:10px;
  margin-top:10px;
  text-align:left;
  font-size:9pt;
  font-style: italic;
  text-decoration: none !important;
  padding:5px;
  background-color:black;
  color:white;
  filter:alpha(opacity=50);-moz-opacity:.50;opacity:.50;
  line-height: 1.0;
}
.pixOverlay hr {
  margin: 10px 0; /* theme override */
}


.imbox { float:left; }
.pixcell .imbox { float:none; }
.pixcell p {
  line-height:1.0;
  margin-bottom:0; /*theme overrides*/
  position: relative;
  text-align: right;
}


/* for safari: */
.imbox a:link,
.imbox a:visited,
.imbox a:active,
.imbox a:hover {
  text-decoration: none !important;
  color:white !important;
}

.imbox {
  /* container */
  position: relative;
  text-align: left;
}
.imbox1 {
  /* bottom layer (image) in container */
  position: absolute;
  border-width: 0px;
}
.imbox img {
  border-radius: 20px;
}
/******************** PICTURES -- NICE CORNERS ****************************/





/*****************  star wars... nothing but... STAR WARS  ***********/
@font-face {
  font-family: 'Droid Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Droid Sans Regular'), local('DroidSans-Regular'), url(/fonts/droid-sans.ttf) format('truetype');
}
.starwords {
  position: relative;
  margin:0; border:0; padding:0;
  width: 100%;
  height: 500px;
  /* background-color: #111; */
}
.starwords a.tag {
  font-family: 'Droid Sans';
  position: absolute;
  text-decoration: none !important;
  display: block;
  border: 0 !important;
  line-height: 1.0;
}
.starwords a.c0 {color: #000}
.starwords a.c1 {color: #333}
.starwords a.c2 {color: #555}
.starwords a.c3 {color: #777}
.starwords a.c4 {color: #999}
.starwords a.tag:hover {color: #a50096 !important}
/*****************  star wars... nothing but... STAR WARS  ***********/



/* https://codepen.io/burtclan/pen/mLqxC */
a.image.featured {
  box-shadow: inset 0 0 10px 5px;
  position: relative;
  color: #666;
}
.mini-post a.image.featured {
  /* these magic missing pieces poached from default theme's `.post` class rules */
  border: 0;
  display: block;
}
a.image.featured:before {
  content: "";
  display: block;
  padding-bottom: calc(100% / 2.35); /* enforce a styley 2.35:1 cinematic aspect ratio */
}
a.image.featured:after {
  /* gray blur on edges */
  box-shadow: inset 0 0 10px 5px;
  content: "";
  position: absolute;
  display: block;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-collapse: separate;
}
a.image.featured img {
  height: auto;
  width: 100%;
  object-fit: cover;
  object-position: center;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
}
a.image.featured.featured-top img {
  object-position: top;
}
a.image.featured.featured-bottom img {
  object-position: bottom;
}

/* OK now when we're showing a full single post, let the image height be fully natural */
/* ie: reverse our customizations above.  Also don't do the edge blurring. */
.post.single a.image.featured {
  box-shadow: none;
  height: auto;
}
.post.single a.image.featured img {
  position: relative;
}
.post.single a.image.featured:after, .post.single a.image.featured:before {
  display: none;
}



.ride-date {
  font-family: monospace;
  font-size: 125%;
  font-weight: bold;
  white-space: pre;
}



/* DARK MODE! */
@media (prefers-color-scheme: darkxxx) {
  body,
  #site-header,
  #site-header .flyout-menu,
  #site-nav-menu,
  article.mini-post header,
  .button {
    color: #ddd;
    background-color: #111;
  }
  article.post,
  article.mini-post {
    color: #ddd;
    background-color: #222;
  }
  h1, h2, h3, h4, h5, h6, .pagination a {
    color: #ddd;
  }
  img {
    filter: grayscale(50%);
  }
}

